<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".fragments.HabitEditingFragment">

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/close_editing_habit"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            app:tint="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/habits_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:hint="@string/edit_habit_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@android:drawable/ic_menu_edit"
                android:contentDescription="@string/add_habits_name_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/title_is_required_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/obligatory_field_text"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="30dp"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/color_line_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <TextView
            android:id="@+id/color_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:textColor="@color/default_color"
            android:text="@string/default_color_text"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="30dp"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/type_line_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/good_habit_button">

                <RadioButton
                    android:id="@+id/good_habit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/good_habit"
                    android:buttonTint="@color/green"/>

                <RadioButton
                    android:id="@+id/bad_habit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/bad_habit"
                    android:buttonTint="@color/red"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="30dp"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/priority_line_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="30dp">

            <Spinner
                android:id="@+id/spinner_priority"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alwaysDrawnWithCache="false"
                android:animateLayoutChanges="true"
                android:backgroundTint="@color/black"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="30dp"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/repetition_line_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/repetition_times"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="@color/black"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="@string/one"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/repeat_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/times_in"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/repetition_period"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/black"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="30dp"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/description" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@null"
            android:hint="@string/add_description_text"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:text="@string/save_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/default_color"/>

</androidx.constraintlayout.widget.ConstraintLayout>