<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#ffffff"
    android:paddingHorizontal="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="40dp"
    android:gravity="center">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:text="@string/bottom_sheet_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:drawableRightCompat="@drawable/arrow_up" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginVertical="10dp"
        app:queryHint="Название"
        app:iconifiedByDefault="false"
        android:padding="0dp"
        android:layout_marginStart="-10dp"
        android:backgroundTint="@color/black" />

    <Spinner
        android:id="@+id/sort"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        style="@style/Spinner"
        android:backgroundTint="@color/black"
        android:layout_marginTop="2dp"
        tools:contentDescription="sort"/>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/filter_by_priority"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        style="@style/Spinner"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/black"
        android:layout_marginVertical="2dp"
        tools:contentDescription="filter by priority">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAppearance="@style/Text.MainText"
            android:layout_marginHorizontal="10dp"
            android:text="@string/bottom_sheet_priority_title"/>
        
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/filter_by_color"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        style="@style/Spinner"
        android:backgroundTint="@color/black"
        android:layout_marginVertical="2dp"
        tools:contentDescription="filter by priority">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAppearance="@style/Text.MainText"
            android:layout_marginHorizontal="10dp"
            android:text="@string/bottom_sheet_color_title"/>

        <View
            android:id="@+id/color_1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="5dp"
            android:layout_gravity="center"
            android:background="@color/default_color"/>

        <View
            android:id="@+id/color_2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="5dp"
            android:layout_gravity="center"
            android:background="@color/default_color"/>

        <View
            android:id="@+id/color_3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="5dp"
            android:layout_gravity="center"
            android:background="@color/default_color"/>

        <TextView
            android:id="@+id/more_colors_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:gravity="center"
            tools:text="+13"/>

    </LinearLayout>

</LinearLayout>